k8s-aws/ingress/api-ingress.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /health_check
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    cert-manager.io/issuer: api-gateway-issuer
spec:
  tls:
    - hosts:
        - aws-dev.resourcewatch.org
      secretName: api-gateway-certificate
  rules:
    - host: aws-dev.resourcewatch.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
